--- a/style.css
+++ b/style.css
@@ -13,7 +13,60 @@ body {
 .sidebar__navigation {
     background-color: #121212;
     border-radius: 8px;
-    padding: 16px 0 0 16px;
+    padding: 16px 0 10px 16px;
+}
+
+.sidebar__navigation hr {
+    width: 90%;
+    border: 1px inset #545454;
+    margin-left: 5px;
+}
+
+.sidebar__navigation_fechar {
+    padding-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1px;
+    margin: 15px 0;
+}
+
+.sidebar__navigation_fechar .linha-hamburber {
+   width: 40%;
+}
+
+.linha-hamburber .titulo-menu-humburger {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+    font-size: 10px;
+    text-align: right;
+}
+
+.sidebar__navigation_fechar .fa-times {
+    font-size: 25px;
+}
+
+.sidebar__navigation_fechar .fa-bars {
+    font-size: 25px;
+}
+
+.sidebar__navigation_fechar .library__button {
+    background-color: transparent;
+    border: 0px;
+    color: #fff;
+}
+
+.sidebar__navigation_fechar hr {
+    border: 1px inset #545454;
+    margin-left: auto;
+}
+
+.sidebar__navigation .fa-times {
+    align-items: end;
+    color: #fff;
 }
 
 .sidebar__navigation .logo {
@@ -41,4 +94,134 @@ body {
     font-family: "DM Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
+}
+
+.library {
+    display: flex;
+    background-color: #121212;
+    border-radius: 8px;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 4px 8px;
+    color: #b3b3b3;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+
+.library hr {
+    width: 90%;
+    border: 1px inset #545454;
+    margin-left: 5px;
+}
+
+.library .library__content {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.library .library__button {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    color: #b3b3b3;
+    background-color: transparent;
+    border: 0;
+    font-weight: 700;
+    font-size: 14px;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 20px 10px;
+}
+
+.library .library__button .fa {
+    font-size: 20px;
+    margin-right: 18px;
+}
+
+.library .library__content .fa-plus {
+    margin: 24px 10px;
+} 
+
+.section-playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+.section-playlist .section-playlist__content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist__content .text {
+    padding-bottom: 14px;
+    color: #fff;
+}
+
+.section-playlist__content .title {
+    font-weight: 700;
+}
+
+.section-playlist__content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist__content .section-playlist__button {
+    display: flex;
+    justify-content: center;
+    margin-top: 12px;
+    padding: 10px;
+    border: 0px;
+    width: 113px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+}
+
+.sidebar .cookies {
+    margin: 25px 20px;
+}
+
+.sidebar .cookies a {
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+.languages .languages__button {
+    background-color: transparent;
+    border: 1px solid #878787;
+    border-radius: 20px;
+    padding: 8px;
+    width: 170px;
+    color: #fff;
+    cursor: pointer;
+    align-items: center;
+    font-weight: 700;
+    margin-bottom: 15px;
 }
