--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
-    /* background-color: #000; */
+    background-color: #fff;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar {
@@ -11,14 +12,14 @@ body {
 }
 
 .sidebar__navigation {
-    background-color: #121212;
+    background-color: var(--preto);
     border-radius: 8px;
     padding: 16px 0 10px 16px;
 }
 
 .sidebar__navigation hr {
     width: 90%;
-    border: 1px inset #545454;
+    border: 1px inset var(--cinza-escuro);
     margin-left: 5px;
 }
 
@@ -40,7 +41,6 @@ body {
     flex-direction: column;
     align-items: center;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
     font-size: 10px;
     text-align: right;
 }
@@ -60,7 +60,7 @@ body {
 }
 
 .sidebar__navigation_fechar hr {
-    border: 1px inset #545454;
+    border: 1px inset var(--cinza-escuro);
     margin-left: auto;
 }
 
@@ -90,22 +90,20 @@ body {
 }
 
 .sidebar nav li a {
-    color: #b3b3b3;
+    color: var(--cinza-claro);
     text-decoration: none;
-    font-family: "DM Sans", sans-serif;
     font-weight: 600;
     font-size: 14px;
 }
 
 .library {
     display: flex;
-    background-color: #121212;
+    background-color: var(--preto);
     border-radius: 8px;
     justify-content: space-between;
     flex-direction: column;
     padding: 4px 8px;
-    color: #b3b3b3;
-    font-family: "DM Sans", sans-serif;
+    color: var(--cinza-claro);
     font-weight: 600;
     font-size: 14px;
     margin-top: 10px;
@@ -114,7 +112,7 @@ body {
 
 .library hr {
     width: 90%;
-    border: 1px inset #545454;
+    border: 1px inset var(--cinza-escuro);
     margin-left: 5px;
 }
 
@@ -128,12 +126,11 @@ body {
     display: flex;
     align-items: center;
     margin-right: 10px;
-    color: #b3b3b3;
+    color: var(--cinza-claro);
     background-color: transparent;
     border: 0;
     font-weight: 700;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -157,7 +154,7 @@ body {
     margin: 8px 0px;
     padding: 16px 20px;
     background-color: #242424;
-    color: #b3b3b3;
+    color: var(--cinza-claro);
     font-weight: 600;
     font-size: 14px;
     border-radius: 5px;
@@ -194,7 +191,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
 }
@@ -204,7 +200,7 @@ body {
 }
 
 .sidebar .cookies a {
-    color: #b3b3b3;
+    color: var(--cinza-claro);
     font-weight: 500;
     font-size: 10px;
     text-decoration: none;
@@ -234,7 +230,7 @@ body {
     position: fixed;
     left: -250px; /* Esconde a barra lateral */
     top: 0;
-    background: #121212;
+    background: var(--preto);
     transition: left 0.3s ease-in-out;
 }
 
@@ -251,7 +247,7 @@ body {
     background: none;
     border: none;
     color: white;
-    background-color: #121212;
+    background-color: var(--preto);
     font-size: 24px;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
