--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -7,5 +7,5 @@
     --cinza-escuro: #545454;
     --cinza-claro: #b3b3b3;
     --bg-icon: #131313;
-    --bg-arrow-color: rgba(0,0,0,.7)
+    --bg-arrow-color: rgba(255,255,07)
 }
